bindings/dotnet/src/Generated/Models.g.cs

// <auto-generated />
// version: 1.0.0
// abi_hash: 5e6878cb4cb395d1a3154ead424735a170510dadf75d5a8d7c8175e7b867461b
using System.Runtime.InteropServices;

namespace RustedGeom.Generated;

public enum RgmStatus : int
{
    Ok = 0,
    InvalidInput = 1,
    NotFound = 2,
    OutOfRange = 3,
    DegenerateGeometry = 4,
    NoConvergence = 5,
    NumericalFailure = 6,
    NotImplemented = 7,
    InternalError = 255,
}

[StructLayout(LayoutKind.Sequential)]
public partial struct RgmKernelHandle
{
    public ulong Field0;

    public ulong Value
    {
        readonly get => Field0;
        set => Field0 = value;
    }
}

[StructLayout(LayoutKind.Sequential)]
public partial struct RgmObjectHandle
{
    public ulong Field0;

    public ulong Value
    {
        readonly get => Field0;
        set => Field0 = value;
    }
}

[StructLayout(LayoutKind.Sequential)]
public partial struct RgmPoint3
{
    public double X;
    public double Y;
    public double Z;
}

[StructLayout(LayoutKind.Sequential)]
public partial struct RgmToleranceContext
{
    public double AbsTol;
    public double RelTol;
    public double AngleTol;
}

[StructLayout(LayoutKind.Sequential)]
public partial struct RgmVec3
{
    public double X;
    public double Y;
    public double Z;
}

[StructLayout(LayoutKind.Sequential)]
public partial struct RgmPlane
{
    public RgmPoint3 Origin;
    public RgmVec3 XAxis;
    public RgmVec3 YAxis;
    public RgmVec3 ZAxis;
}

